# bevy_layout_ui

./: Cargo.toml  README.md
assets/: basic_node.layout.json  button.layout.json  image_node.layout.json  new_layout.layout.json  sublayout.layout.json
examples/: basic_node.rs  editor.rs  image_node.rs
examples/shaders/: basic.wgsl  image.wgsl
src/: animations.rs  default_node.wgsl  invalid_node.wgsl  lib.rs  loader.rs  math.rs  render.rs  user_data.rs  utils.wgsl  view.rs
src/builtins/: animations.rs  image.rs  mod.rs  null.rs  sublayout.rs  text.rs
src/builtins/shaders/: image_node.wgsl  text_node.wgsl
src/builtins/text/: buffer_glyph.rs
src/editor/: animation.rs  mod.rs  node_ui.rs  selectable_label.rs
src/shaders/: basic.wgsl
