[package]
name = "bevy_layout_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
egui = { version = "0.27", optional = true }
bevy-inspector-egui = { version = "0.24.0", optional = true }
bytemuck = { version = "1.15.0", features = ["derive"] }
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.59"
serde_json = "1.0.116"
serde-value = "0.7.0"
cosmic-text = "0.11.2"

[features]
editor-ui = ["egui", "bevy-inspector-egui"]

[dev-dependencies]
bevy-inspector-egui = "0.24.0"
egui_dock = "0.12.0"
