[package]
name = "bevy_layout_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
egui = { version = "0.26", optional = true }
bevy-inspector-egui = { version = "0.23.0", optional = true }
bytemuck = { version = "1.15.0", features = ["derive"] }
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.59"
serde_json = "1.0.116"
serde-value = "0.7.0"
cosmic-text = "0.11.2"
indexmap = { version = "2.2.6", features = ["serde"] }
bitflags = "2.5.0"

[features]
editor-ui = ["egui", "bevy-inspector-egui"]

[dev-dependencies]
bevy-inspector-egui = "0.23.0"
egui_dock = "0.11.0"
walkdir = "2.5.0"
